--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,21 +18,53 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Beep Boop
+author: [site.github.owner_name]
+lang: en
+
+copyright: false
+edit: false
+logo: false # relative path to your image, eg: assets/logo.png
+disqus: false # your disqus username
+
+email: d@irrgang.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://irrgang.dev" # the base hostname & protocol for your site, e.g. http://example.com
+# twitter_username: jekyllrb
+github_username:  dirrgang
 
 # Build settings
-theme: jekyll-theme-cayman
+remote_theme: rundocs/jekyll-rtd-theme
+edit: true
+
+# custom github list items, the order is avaiable
+addons:
+  - github:
+    - homepage
+    - issues
+    - download
+  - i18n
+  - plugins
+  - analytics
+
+addons_branch: true # show github pages source branch
+
+copyright:
+  revision: true
+
+readme_index:
+  with_frontmatter: true
+
 plugins:
   - jekyll-feed
+  - jemoji
+  - jekyll-avatar
+  - jekyll-mentions
 
 # Exclude from processing.
 # The following items will not be processed, by default.
